[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://audio/dices.smp" type="Sample" id=2]
[ext_resource path="res://audio/write_effect.smp" type="Sample" id=3]
[ext_resource path="res://assets/menu_back.png" type="Texture" id=4]
[ext_resource path="res://assets/logo.png" type="Texture" id=5]
[ext_resource path="res://assets/black_ch.fnt" type="BitmapFont" id=6]
[ext_resource path="res://assets/black_ch_32.fnt" type="BitmapFont" id=7]

[sub_resource type="SampleLibrary" id=1]

samples/dices = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}
samples/write_effect = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="menu" type="Node"]

script/script = ExtResource( 1 )

[node name="audio" type="Node" parent="."]

[node name="fx_player" type="SamplePlayer" parent="audio"]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
texture = ExtResource( 4 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="logo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 80.0
margin/right = 960.0
margin/bottom = 224.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="button_start" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 768.0
margin/top = 400.0
margin/right = 928.0
margin/bottom = 480.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="option4" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 512.0
margin/right = 376.0
margin/bottom = 536.0

[node name="player_caption1" type="Label" parent="option4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P4 - House of Rainmere"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_button1" type="OptionButton" parent="option4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="option3" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 448.0
margin/right = 376.0
margin/bottom = 472.0

[node name="player_caption1" type="Label" parent="option3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P3 - House of Augustham"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_button1" type="OptionButton" parent="option3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="option2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 384.0
margin/right = 376.0
margin/bottom = 408.0

[node name="player_caption1" type="Label" parent="option2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P2 - House of Heltook"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_button1" type="OptionButton" parent="option2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="option1" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 320.0
margin/right = 376.0
margin/bottom = 344.0

[node name="player_caption1" type="Label" parent="option1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 352.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P1 - House of Gillfield"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="option_button1" type="OptionButton" parent="option1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 592.0
margin/bottom = 48.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[connection signal="pressed" from="button_start" to="." method="_on_button_start_pressed"]


